change name and add drop down button

--- a/RentalKendaraan_041/Views/Shared/_Layout.cshtml
+++ b/RentalKendaraan_041/Views/Shared/_Layout.cshtml
@@ -33,6 +33,20 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li>
+                        class="dropdown"><a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+                        <i class="fa fa-caret-down"></i>
+                        <div class="dropdown-content">
+                            <a href="Views/Customers/Index.cshtml">Customer</a>
+                            <a href="Views/Peminjamans/Index.cshtml">Peminjaman</a>
+                            <a href="Views/Pengembalians/Index.cshtml">Pengembalian</a>
+                            <a href="Views/Kendaraans/Index.cshtml">Kendaraan</a>
+                            <a href="Views/JenisKendaraans/Index.cshtml">Jenis Kendaraan</a>
+                            <a href="Views/KondisiKendaraans/Index.cshtml">Kondisi Kendaraan</a>
+                            <a href="Views/Jaminans/Index.cshtml">Jaminan</a>
+                            <a href="Views/Genders/Index.cshtml">Gender</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
