--- a/RentalKendaraan_041/Views/Pengembalians/Delete.cshtml
+++ b/RentalKendaraan_041/Views/Pengembalians/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Hapus Data Pengembalian</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Apakah anda yakin ingin menghapus data ini?</h3>
 <div>
     <h4>Pengembalian</h4>
     <hr />
